# chessengineroast

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  series.toml
.scratch/chess-engine-roast/issues/: 01-project-scaffold.md  02-play-single-game.md  03-series-play.md  04-post-match-analysis.md  05-engine-hangs-queen.md  06-tagged-series.md
chessengineroast/: __main__.py  analysis.py  cli.py  config.py  engine.py  game.py
docs/adr/: 0001-engine-binary-discovery-by-convention.md
tests/: mock_engine.py  test_analysis.py  test_cli.py  test_config_engine.py  test_game.py
